@@ -1,3 +1,8 @@
+2010-03-03  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Added 'matches_value' support to 'onchange'
+	  alerts.
+
 2010-03-02  Raúl Mateos  <raulofpandora@gmail.com>
 
         * util/tentacle_serverd, util/pandora_server: Updated year. Changed
